--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://bzhezinskyi.github.io/IceCream-team2",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /IceCream-team2/"
+    "build": "parcel build src/*.html --public-url /goit-group-markup-IceCream-project/"
   },
   "repository": {
     "type": "git",
