--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "icecream-team2",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://bzhezinskyi.github.io/IceCream-team2",
+  "homepage": "https://olehscherbak.github.io/goit-group-markup-IceCream-project",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-group-markup-IceCream-project/"
